--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,17 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,900" rel="stylesheet" />
     <!-- Meta -->
-    <title>ICICB DEX</title>
+    <title>Babylon DEX</title>
     <meta
       name="description"
-      content="Flip EGG, and stake them with ICICB DEX, the best decentralized exchange on ICICB Chain.y"
+      content="Flip and stake them with Babylon DEX, the best decentralized exchange on Babylon Chain.y"
     />
     <meta name="theme-color" content="#000000" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no" />
-    <meta name="twitter:description" content="Farm the native coin of ICICB DEX with ICICB DEX FLP Token" />
+    <meta name="twitter:description" content="Farm the native coin of Babylon DEX with Babylon DEX FLP Token" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="ICICB DEX - A next evolution DeFi exchange on ICICB CHAIN" />
+    <meta name="twitter:title" content="Babylon DEX - A next evolution DeFi exchange on Babylon CHAIN" />
     
   </head>
   <body>
