--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,900" rel="stylesheet" />
   <!-- Meta -->
-  <title>Babylon DEX</title>
+  <title>babylonswap</title>
   <meta name="description"
-    content="Flip and stake them with Babylon DEX, the best decentralized exchange on Babylon Chain.y" />
+    content="Flip and stake them with babylonswap, the best decentralized exchange on Babylon Chain.y" />
   <meta name="theme-color" content="#000000" />
   <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
   <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no" />
-  <meta name="twitter:description" content="Farm the native coin of Babylon DEX with Babylon DEX FLP Token" />
+  <meta name="twitter:description" content="Farm the native coin of babylonswap with babylonswap FLP Token" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Babylon DEX - A next evolution DeFi exchange on Babylon CHAIN" />
+  <meta name="twitter:title" content="babylonswap - A next evolution DeFi exchange on Babylon CHAIN" />
 
 </head>
 
