--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,900" rel="stylesheet" />
   <!-- Meta -->
-  <title>babylonswap</title>
+  <title>BabylonSwap</title>
   <meta name="description"
     content="Flip and stake them with babylonswap, the best decentralized exchange on Babylon Chain.y" />
   <meta name="theme-color" content="#000000" />
@@ -23,7 +23,7 @@
 
 </head>
 
-<body style="overflow: hidden;">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <audio id="bgMusic">
     <source src="swap.mp3" type="audio/mp3" />
