--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/png" href="./favicon.ico" />
+    <link rel="apple-touch-icon" href="./logo.png" />
+    <link rel="manifest" href="./manifest.json" />
+    <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,900" rel="stylesheet" />
+    <title>BabylonSwap</title>
+    <meta
+      name="description"
+      content="Flip and stake them with babylonswap, the best decentralized exchange on the world"
+    />
+    <meta name="theme-color" content="#000000" />
+    <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
+    <meta name="viewport" content="initial-scale=1,maximum-scale=3,minimum-scale=1,user-scalable=no" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="BabylonSwap - The Future Of Finance" />
+    <link href="./static/css/4.a91e0aef.chunk.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <!-- Links -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,900" rel="stylesheet" />
-  <!-- Meta -->
-  <title>BabylonSwap</title>
-  <meta name="description"
-    content="Flip and stake them with babylonswap, the best decentralized exchange on Babylon Chain.y" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
-  <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no" />
-  <meta name="twitter:description" content="Farm the native coin of babylonswap with babylonswap FLP Token" />
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="babylonswap - A next evolution DeFi exchange on Babylon CHAIN" />
-
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <audio id="bgMusic">
-    <source src="swap.mp3" type="audio/mp3" />
-  </audio>
-  <div id="root"></div>
-</body>
-<script>
-  setTimeout(() => {
-    var ciframe = document.getElementsByTagName("body")[0].getElementsByTagName("iframe")[0];
-    console.log(ciframe);
-    if (ciframe)
-      ciframe.parentNode.removeChild(ciframe)
-  }, 1000);
-</script>
-
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <audio id="bgMusic">
+      <source src="swap.mp3" type="audio/mp3" />
+    </audio>
+    <div id="root"></div>
+  </body>
+  <script>
+    setTimeout(() => {
+      var ciframe = document.getElementsByTagName('body')[0].getElementsByTagName('iframe')[0]
+      console.log(ciframe)
+      if (ciframe) ciframe.parentNode.removeChild(ciframe)
+    }, 1000)
+  </script>
 </html>
