--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,13 @@
     <title>BabylonSwap</title>
     <meta
       name="description"
-      content="Flip and stake them with babylonswap, the best decentralized exchange on the world"
+      content="Hyper Deflation On Steroids For Any BEP20 Token"
     />
     <meta name="theme-color" content="#000000" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
     <meta name="viewport" content="initial-scale=1,maximum-scale=3,minimum-scale=1,user-scalable=no" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="BabylonSwap - The Future Of Finance" />
+    <meta name="twitter:title" content="BabylonSwap - The Perfected Petrodollar System" />
     <link href="./static/css/4.a91e0aef.chunk.css" rel="stylesheet" />
   </head>
 
