--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
     <meta name="viewport" content="initial-scale=1,maximum-scale=3,minimum-scale=1,user-scalable=no" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="BabylonSwap - The Perfected Petrodollar System" />
+    <meta name="twitter:title" content="BabylonSwap - The Perfect Pegging System" />
     <link href="./static/css/4.a91e0aef.chunk.css" rel="stylesheet" />
   </head>
 
