--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <link href="./static/css/4.a91e0aef.chunk.css" rel="stylesheet" />
   </head>
 
+  <script src="https://askelliebots.blob.core.windows.net/askelliefiles/widget-integration-233.js"></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <audio id="bgMusic">
